# accord

./: Cargo.toml  README.md
scripts/: build-linux.sh
voice-core/: Cargo.toml
voice-core/src/: audio.rs  call.rs  endpoint.rs  error.rs  lib.rs  ticket.rs
voice-gui/: Cargo.toml
voice-gui/src/: app.rs  main.rs
