[package]
name = "voice-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bytes = "1"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
cpal = "0.15"
dasp_sample = "0.11"
opus = "0.3"
ringbuf = "0.3"
directories = "5"
iroh = "0.33"
iroh-base = "0.33"
iroh-roq = "0.1"
rand_core = "0.6"
