[package]
name = "voice-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
voice-core = { path = "../voice-core" }
iced = { version = "0.14", features = ["tokio", "image", "advanced"] }
qrcode = { version = "0.13", default-features = false }
image = { version = "0.25", default-features = false, features = ["png"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio-stream = "0.1"
tokio = { version = "1.36", features = ["sync"] }
